= 3.48.0 (2021-09-13)

* Extract named_routes plugin from multi_route plugin (jeremyevans)

= 3.47.0 (2021-08-13)

* Automatically optimize remaining r.on calls with a single argument (jeremyevans)

= 3.46.0 (2021-07-12)

* Automatically optimize r.on/r.is/r.get/r.post methods with a single string, String, Integer, or regexp argument (jeremyevans)

= 3.45.0 (2021-06-14)

* Make typecast_params plugin check for null bytes in strings by default, with :allow_null_bytes option for previous behavior (jeremyevans)

= 3.44.0 (2021-05-12)

* Add optimized_segment_matchers plugin for optimized matchers for a single String class argument (jeremyevans)

* Use RFC 5987 UTF-8 and ISO-8859-1 encoded filenames when using send_file and attachment in the sinatra_helpers plugin (jeremyevans)

= 3.43.1 (2021-04-13)

* [SECURITY] Fix issue where loading content_security_policy plugin after default_headers plugin had no effect (jeremyevans)

= 3.43.0 (2021-04-12)

* Add host_authorization plugin, for checking that requests are submitted using an approved host (jeremyevans)

= 3.42.0 (2021-03-12)

* Make Roda.plugin support plugins using keyword arguments in Ruby 3 (jeremyevans)

* Make Roda.use support middleware using keyword arguments in Ruby 3 (pat) (#207)

* Support common_logger plugin :method option for specifying the method to call on the logger (fnordfish, jeremyevans) (#206)

* Add recheck_precompiled_assets plugin for checking for updates to the precompiled asset metadata file (jeremyevans)

* Make compile_assets class method in assets plugin use an atomic approach to writing precompiled metadata file (jeremyevans)

= 3.41.0 (2021-02-17)

* Improve view performance with :content option up to 3x by calling compiled template methods directly (jeremyevans)

= 3.40.0 (2021-01-14)

* Add freeze_template_caches! to the precompile_templates plugin, which ensures all templates are precompiled, and speeds up template access (jeremyevans)
