@@ -118,6 +118,30 @@ require_relative "spec_helper"
         body('/2/1').must_equal ''
       end
 
+      it "r.#{meth} with other supported class argument should match if one if the elements matches" do
+        app(:bare) do
+          plugin :class_matchers
+          class_matcher(Float, /(\d+\.\d+)/) do |str|
+            [str.to_f]
+          end
+          route do |r|
+            r.send meth, Float do |arg|
+              "#{arg.class}-#{arg}-#{r.remaining_path}"
+            end
+            ''
+          end
+        end
+
+        body('').must_equal ''
+        body.must_equal ''
+        body('fo').must_equal ''
+        body('123.3').must_equal ''
+        body('/fo').must_equal ''
+        body('/123.3').must_equal 'Float-123.3-'
+        body('/123.3/').must_equal ''
+        body('/123.3/1').must_equal ''
+      end
+
       it "r.#{meth} with unsupported class should raise" do
         app do |r|
           r.send(meth, Array) do |*args|
@@ -164,6 +188,133 @@ require_relative "spec_helper"
         body('/foo/').must_equal ''
         body('/foo/1').must_equal '["foo", 1]'
         body('/foo/1/').must_equal ''
+      end
+
+      it "r.#{meth} with false argument should never match" do
+        app do |r|
+          r.send(meth, false) do |*args|
+            args.length.to_s
+          end
+          ''
+        end
+
+        body('').must_equal ''
+        body.must_equal ''
+        body('fo').must_equal ''
+        body('foo').must_equal ''
+        body('/fo').must_equal ''
+        body('/foo').must_equal ''
+        body('/foo/').must_equal ''
+        body('/foo/1').must_equal ''
+      end
+
+      it "r.#{meth} with nil argument should never match" do
+        app do |r|
+          r.send(meth, nil) do |*args|
+            args.length.to_s
+          end
+          ''
+        end
+
+        body('').must_equal ''
+        body.must_equal ''
+        body('fo').must_equal ''
+        body('foo').must_equal ''
+        body('/fo').must_equal ''
+        body('/foo').must_equal ''
+        body('/foo/').must_equal ''
+        body('/foo/1').must_equal ''
+      end
+
+      it "r.#{meth} with array argument should match if one if the elements matches" do
+        app do |r|
+          r.send(meth, ['fo', 'foo']) do |arg|
+            "#{arg}-#{r.remaining_path}"
+          end
+          ''
+        end
+
+        body('').must_equal ''
+        body.must_equal ''
+        body('fo').must_equal ''
+        body('foo').must_equal ''
+        body('/fo').must_equal 'fo-'
+        body('/foo').must_equal 'foo-'
+        body('/foo/').must_equal ''
+        body('/foo/1').must_equal ''
+      end
+
+      it "r.#{meth} with hash argument should match if one if hash matches" do
+        app do |r|
+          r.send(meth, :all=>['fo', 'foo']) do |*args|
+            "#{args.length}-#{r.remaining_path}"
+          end
+          ''
+        end
+
+        body('').must_equal ''
+        body.must_equal ''
+        body('fo').must_equal ''
+        body('foo').must_equal ''
+        body('/fo').must_equal ''
+        body('/foo').must_equal ''
+        body('/fo/foo').must_equal '0-'
+        body('/fo/foo/').must_equal ''
+        body('/fo/foo/1').must_equal ''
+      end
+
+      it "r.#{meth} with symbol argument should match next segment if non-empty" do
+        app do |r|
+          r.send(meth, :foo) do |*args|
+            "#{args.inspect}-#{r.remaining_path}"
+          end
+          ''
+        end
+
+        body.must_equal ''
+        body('fo').must_equal ''
+        body('foo').must_equal ''
+        body('/fo').must_equal '["fo"]-'
+        body('/foo').must_equal '["foo"]-'
+        body('/foo/').must_equal ''
+        body('/foo/1').must_equal ''
+      end
+
+      it "r.#{meth} with proc argument should match unless it returns nil/false" do
+        x = nil
+        app do |r|
+          r.send(meth, proc{request.remaining_path.clear if request.remaining_path == '/'; x}) do |*args|
+            args.length.to_s
+          end
+          ''
+        end
+
+        body.must_equal ''
+        x = false
+        body.must_equal ''
+        x = true
+        body.must_equal '0'
+        body("/a").must_equal ''
+      end
+
+      it "r.#{meth} with custom argument should match if one if the elements matches" do
+        x = Object.new
+        app(:bare) do
+          plugin :custom_matchers
+          custom_matcher(Object) do |obj|
+            @captures << obj.object_id.to_s
+            @remaining_path = '' if @remaining_path == '/'
+          end
+          route do |r|
+            r.send(meth, x) do |arg|
+              "#{arg}-#{r.remaining_path}"
+            end
+            ''
+          end
+        end
+
+        body.must_equal "#{x.object_id}-"
+        body('/a').must_equal ""
       end
     end
 
