@@ -1,3 +1,7 @@
+= master
+
+* Automatically optimize remaining r.is/r.get/r.post calls with a single argument (jeremyevans)
+
 = 3.48.0 (2021-09-13)
 
 * Extract named_routes plugin from multi_route plugin (jeremyevans)
